# pyphen-rs

./: COPYING  Cargo.toml  README.md
dictionaries/: hyph_af_ZA.dic  hyph_bg.dic  hyph_ca.dic  hyph_de_AT.dic  hyph_de_CH.dic  hyph_de_DE.dic  hyph_en.dic  hyph_en_GB.dic  hyph_es.dic  hyph_et_EE.dic  hyph_fr.dic  hyph_gl.dic  hyph_hr.dic  hyph_hu_HU.dic  hyph_id_ID.dic  hyph_is.dic  hyph_it_IT.dic  hyph_lv.dic  hyph_nn.dic  hyph_pt_BR.dic  hyph_ro.dic  hyph_sl_SI.dic  hyph_sr.dic  hyph_sr_Latn.dic  hyph_sv.dic  hyph_te.dic  hyph_uk_UA.dic  hyph_zu_ZA.dic
src/: alternative_parser.rs  data_int.rs  hyph_dict.rs  lib.rs
src/pyphen/: builder.rs  iter.rs  mod.rs
