[package]
name = "pyphen-rs"
version = "0.1.0"
authors = ["Naresh Ganduri <gandurinaresh@gmail.com>"]
edition = "2018"
repository = "https://github.com/nareshganduri/pyphen-rs"
homepage = "https://github.com/nareshganduri/pyphen-rs"
description = "A pure Rust port of Pyphen, a Python hyphenation library"
license = "GPL-2.0+ AND LGPL-2.1+ AND MPL-1.1"
readme = "README.md"

[dependencies]
regex = "1.1.6"
lazy_static = "1.3.0"